k8s/kkweon-okteto/grafana-agent.yaml
kind: ConfigMap
metadata:
  name: grafana-agent
apiVersion: v1
data:
  agent.yaml: |
    server:
      http_listen_port: 12345
    prometheus:
      wal_directory: /tmp/grafana-agent-wal
      global:
        scrape_interval: 15s
      configs:
      - name: integrations
        remote_write:
        - url: https://prometheus-blocks-prod-us-central1.grafana.net/api/prom/push
          basic_auth:
            username: ${GRAFANA_KKWEON_USERNAME}
            password: ${GRAFANA_KKWEON_PASSWORD}
        scrape_configs:
        - job_name: integrations/kubernetes/services
          static_configs:
            - targets:
                # this should match service/server:http-metrics.
              - server:9093
        - job_name: envoy
          metrics_path: /stats/prometheus
          static_configs:
          - targets:
            - envoy:9000
    integrations:
      prometheus_remote_write:
      - url: https://prometheus-blocks-prod-us-central1.grafana.net/api/prom/push
        basic_auth:
          username: ${GRAFANA_KKWEON_USERNAME}
          password: ${GRAFANA_KKWEON_PASSWORD}

    loki:
      configs:
      - name: integrations
        clients:
        - url: https://logs-prod-us-central1.grafana.net/api/prom/push
          basic_auth:
            username: ${GRAFANA_KKWEON_USERNAME}
            password: ${GRAFANA_KKWEON_PASSWORD}
        positions:
          filename: /tmp/positions.yaml
        target_config:
          sync_period: 10s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-agent
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: grafana-agent
  template:
    metadata:
      labels:
        name: grafana-agent
    spec:
      containers:
        - args:
            - -config.file=/etc/agent/agent.yaml
          command:
            - /bin/agent
          image: grafana/agent:v0.15.0
          imagePullPolicy: IfNotPresent
          name: agent
          ports:
            - containerPort: 12345
              name: http-metrics
          volumeMounts:
            - mountPath: /etc/agent
              name: grafana-agent
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - configMap:
            name: grafana-agent
          name: grafana-agent
